projects/compiler/test/parser/assignment_error_assignment_precedence.out
Error at %FILE_NAME%:1:7
Unexpected token '=':
  |  a = b = c
           ^